--- a/web/map.html
+++ b/web/map.html
@@ -15,17 +15,20 @@
 <body class="toolbar-hidden">
   <div id="map"></div>
   <div class="toolbar">
-    <div class="toolbar-route-wrap">
-      <button type="button" id="btnRouteMenu" title="路线操作">路线 ▾</button>
-      <div id="toolbarRouteDropdown" class="toolbar-route-dropdown">
-        <button type="button" id="btnRefresh">更新路线</button>
-        <button type="button" id="btnRestore">恢复上次线路</button>
+    <div class="toolbar-row toolbar-row--btns">
+      <div class="toolbar-route-wrap">
+        <button type="button" id="btnRouteMenu" title="路线操作">路线 ▾</button>
+        <div id="toolbarRouteDropdown" class="toolbar-route-dropdown">
+          <button type="button" id="btnRefresh">更新路线</button>
+          <button type="button" id="btnRestore">恢复上次线路</button>
+        </div>
       </div>
+      <a id="btnBackToConsole" href="index.html" target="_self">← 返回</a>
+      <button type="button" id="btnStrategy" title="路线策略">策略</button>
+      <a id="btnOpenBaiduNav" href="#" target="_blank" rel="noopener" class="toolbar-btn-link" style="display: none;">打开百度导航</a>
+      <button type="button" id="btnCollapse" title="收起菜单">收起</button>
     </div>
-    <a id="btnBackToConsole" href="index.html" target="_self">← 返回</a>
-    <button type="button" id="btnStrategy" title="路线策略">策略</button>
-    <span id="routeInfo" class="status"></span>
-    <button type="button" id="btnCollapse" title="收起菜单">收起</button>
+    <span id="routeInfo" class="status toolbar-row toolbar-row--status"></span>
   </div>
   <div id="restrictionHint" class="restriction-hint" style="display: none;" title="限行提示"></div>
   <div id="routeStrategyPanel" class="">
@@ -44,15 +47,10 @@
   <button type="button" id="btnToggleUI" class="show" title="显示菜单">≡ 菜单</button>
   <div id="navPanel" class="nav-panel" style="display: none;">
     <div id="nextStopText" class="next-stop"></div>
-    <div class="btns">
-      <a id="btnOpenNav" href="#" target="_blank" rel="noopener" class="btn-nav">打开导航</a>
-      <button type="button" id="btnArrived" class="btn-arrived">已到达</button>
-    </div>
   </div>
   <div id="allDonePanel" class="nav-panel" style="display: none;">
     <span class="all-done">✅ 全部送达</span>
     <div class="btns">
-      <a id="btnOpenNavAllDone" href="#" target="_blank" rel="noopener" class="btn-nav">打开导航</a>
       <a id="btnBackToConsoleFromAllDone" href="index.html" target="_self" class="btn-nav" style="text-align:center;">返回控制台</a>
     </div>
   </div>
