--- a/web/setup.html
+++ b/web/setup.html
@@ -100,10 +100,10 @@
     </nav>
   </div>
 
-  <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
-  <script src="index-config.js"></script>
-  <script src="index-state.js"></script>
-  <script src="auth.js"></script>
-  <script src="setup.js"></script>
+  <script src="https://unpkg.com/@supabase/supabase-js@2" defer></script>
+  <script src="index-config.js" defer></script>
+  <script src="index-state.js" defer></script>
+  <script src="auth.js" defer></script>
+  <script src="setup.js" defer></script>
 </body>
 </html>
