--- a/web/map.html
+++ b/web/map.html
@@ -23,7 +23,7 @@
           <button type="button" id="btnRestore">恢复上次线路</button>
         </div>
       </div>
-      <a id="btnBackToConsole" href="index.html" target="_self">← 返回</a>
+      <a id="btnBackToConsole" href="index.html" target="_self" class="toolbar-btn-link">← 返回</a>
       <button type="button" id="btnStrategy" title="路线策略">策略</button>
       <a id="btnOpenBaiduNav" href="#" target="_blank" rel="noopener" class="toolbar-btn-link" style="display: none;">打开百度导航</a>
       <button type="button" id="btnCollapse" title="收起菜单">收起</button>
