--- a/web/index.html
+++ b/web/index.html
@@ -206,10 +206,14 @@
     function addTap(el, fn) {
       if (!el) return;
       var touchHandled = false;
-      el.addEventListener("touchstart", function (e) {
+      function run(e) {
         touchHandled = true;
-        e.preventDefault();
+        if (e) e.preventDefault();
         fn();
+      }
+      el.addEventListener("touchstart", function (e) { run(e); }, { passive: false });
+      el.addEventListener("pointerdown", function (e) {
+        if (e.pointerType === "touch") run(e);
       }, { passive: false });
       el.addEventListener("touchend", function () {
         setTimeout(function () { touchHandled = false; }, 350);
@@ -243,6 +247,11 @@
       if (appHeader) appHeader.classList.add("app-header-hidden");
       if (appHeaderExtra) appHeaderExtra.classList.add("app-header-hidden");
       setActive(navMap);
+      if (mapFrame && mapFrame.contentWindow) {
+        var w = mapFrame.contentWindow;
+        setTimeout(function () { try { w.postMessage({ type: "smartdiaodu_map_visible" }, "*"); } catch (e) {} }, 150);
+        setTimeout(function () { try { w.postMessage({ type: "smartdiaodu_map_visible" }, "*"); } catch (e) {} }, 500);
+      }
     }
     var setupLoaded = false;
     function showSetup() {
