新增控制台过滤脚本，优化登录页及其他页面的控制台报错提示

--- a/web/index.html
+++ b/web/index.html
@@ -6,6 +6,7 @@
   <meta name="theme-color" content="#0c0c0f" />
   <title>顺风车调度 · 控制台</title>
   <script src="config.js"></script>
+  <script src="console-filter.js"></script>
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     tailwind.config = {
