--- a/web/login.html
+++ b/web/login.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>登录 · 顺风车智能调度</title>
   <script src="config.js"></script>
+  <script src="console-filter.js"></script>
   <style>
     :root { --bg: #0f1419; --card: #1a2332; --border: #2d3a4d; --text: #e6edf3; --muted: #8b949e; --accent: #58a6ff; --red: #f85149; }
     * { box-sizing: border-box; }
