--- a/web/map.html
+++ b/web/map.html
@@ -10,6 +10,7 @@
   <meta name="format-detection" content="telephone=no" />
   <title>路线地图</title>
   <script src="config.js"></script>
+  <script src="console-filter.js"></script>
   <link rel="stylesheet" href="map.css" />
 </head>
 <body class="toolbar-hidden">
