--- a/web/setup.html
+++ b/web/setup.html
@@ -6,6 +6,7 @@
   <meta name="theme-color" content="#0c0c0f" />
   <title>设置 · 顺风车调度</title>
   <script src="config.js"></script>
+  <script src="console-filter.js"></script>
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     tailwind.config = {
