--- a/web/setup.html
+++ b/web/setup.html
@@ -56,28 +56,24 @@
           <span class="text-big font-medium">停止接单</span>
         </button>
       </div>
-      <div id="planPanel" class="mt-4 p-4 rounded-xl bg-[#0c0c0f] border border-border hidden">
-        <div id="planList" class="space-y-4 mb-4"></div>
-        <button type="button" id="btnAddPlan" class="w-full py-3 rounded-xl border border-dashed border-border text-muted font-medium mb-3">＋ 添加下一批计划</button>
-        <p class="text-sm text-muted">按时间排序，优先第 1 批找单。计划不删；当前批跑完后点「结束找单」即可进入下一批。</p>
-      </div>
       <div class="mt-5 pt-4 border-t border-border">
         <p class="text-muted text-sm mb-2">清空本次计划</p>
         <button type="button" id="btnClearWaypointsAndPlan" class="w-full py-3 rounded-xl border border-danger/60 text-danger font-medium hover:bg-danger/20 mb-4">
           清空途经
         </button>
         <p class="text-sm text-muted mb-4">从数据库取消本车所有已分配订单，并清空本地途经点与乘客列表，仅保留司机位置。</p>
-        <p class="text-muted text-sm mb-3">绕路容忍度（分钟）</p>
-        <div class="flex items-center gap-4">
-          <button type="button" id="detourMinus" class="btn-touch w-12 h-12 rounded-xl bg-panel border border-border text-xl font-bold hover:bg-border">−</button>
-          <span id="detourVal" class="text-big font-semibold min-w-[3rem] text-center">15</span>
-          <button type="button" id="detourPlus" class="btn-touch w-12 h-12 rounded-xl bg-panel border border-border text-xl font-bold hover:bg-border">+</button>
+      </div>
+    </div>
+
+    <!-- 调度模式弹窗：各模式设置均在弹窗内 -->
+    <div id="modeModalOverlay" class="fixed inset-0 bg-black/60 z-[2000] p-4 flex items-center justify-center hidden" aria-hidden="true">
+      <div id="modeModal" class="bg-panel border border-border rounded-2xl w-full max-w-lg max-h-[85vh] overflow-hidden flex flex-col shadow-xl">
+        <div class="flex items-center justify-between px-4 py-3 border-b border-border flex-shrink-0">
+          <h4 id="modeModalTitle" class="text-lg font-medium text-gray-100"></h4>
+          <button type="button" id="modeModalClose" class="btn-touch p-2 rounded-lg text-muted hover:bg-border hover:text-gray-100" aria-label="关闭">✕</button>
         </div>
-        <p class="text-muted text-sm mt-4 mb-3">高收益门槛（元）</p>
-        <div class="flex items-center gap-4">
-          <button type="button" id="profitMinus" class="btn-touch w-12 h-12 rounded-xl bg-panel border border-border text-xl font-bold hover:bg-border">−</button>
-          <span id="profitVal" class="text-big font-semibold min-w-[3rem] text-center">100</span>
-          <button type="button" id="profitPlus" class="btn-touch w-12 h-12 rounded-xl bg-panel border border-border text-xl font-bold hover:bg-border">+</button>
+        <div id="modeModalBody" class="flex-1 overflow-auto p-4">
+          <!-- 动态填入：下次计划=计划列表；半路吸尘器=绕路/高收益；附近接力/停止接单=说明+按钮 -->
         </div>
       </div>
     </div>
